-- Version 2.4.8, released 21-4-2018

 * An autosave mechanism has been implemented:
   + WorldPainter will autosave the world every five minutes (if it has changed, and after ten seconds of inactivity)
   + If WorldPainter is not shut down correctly, it will load the autosaved world automatically the next time it is started
   + You can disable the autosave mechanism on the Preferences screen if you wish. You can also configure the guard time (the time you have to be inactive before it will autosave) and interval (the minimum time between autosaves) there
   + The autosave is stored separately from your .world file, in the WorldPainter config directory
   + WorldPainter keeps a copy of the previous three autosaves in the same directory, which you could manually recover if your autosaved changes somehow get lost or overwritten

-- Version 2.4.7, released 18-4-2018

 * Administrative update: replace expired keys and certificates

-- Version 2.4.6, released 18-4-2018

 * Bug fix: don't normalise the thicknesses of the layers of a layered material to add up to 1000

-- Version 2.4.5, released 17-4-2018

 * On Mac OS X with Java 10, lock the visual theme to Metal to work around a bug in a support library. To use other visual themes, downgrade Java to version 9, or wait for a new release of WorldPainter with the fixed support library (it is not yet known when this will be released)
 * Bug fix: fix a recurring error message while Exporting a world on Mac OS X
 * Bug fix: fix a problem with the scrollbar range being too small when zoomed out, making it difficult to scroll to the entire extent of the world

-- Version 2.4.4, released 13-4-2018
